@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n3.c	1.73 (gritter) 2/17/06
+ * Sccsid @(#)n3.c	1.74 (gritter) 3/23/06
  */
 
 /*
@@ -81,6 +81,8 @@ int	strflg;
 #endif
 
 static void	caseshift(void);
+static void	casesubstring(void);
+static void	caselength(void);
 static int	getls(int);
 static void	addcon(int, char *, void(*)(int));
 
@@ -136,6 +138,8 @@ growcontab(void)
 		addcon(i++, "fps", (void(*)(int))casefps);
 		addcon(i++, "vpt", (void(*)(int))casevpt);
 		addcon(i++, "fspacewidth", (void(*)(int))casefspacewidth);
+		addcon(i++, "length", (void(*)(int))caselength);
+		addcon(i++, "substring", (void(*)(int))casesubstring);
 	} else {
 		for (i = 0; i < sizeof mhash / sizeof *mhash; i++)
 			if (mhash[i])
@@ -1162,6 +1166,9 @@ casechop(void)
 	int	i, j;
 	filep	savip, savoffset;
 
+	if (dip != d)
+		wbfl();
+	lgf++;
 	skip(1);
 	if ((i = getrq()) == 0)
 		return;
@@ -1184,6 +1191,105 @@ casechop(void)
 	}
 	ip = savip;
 	offset = savoffset;
+}
+
+void
+casesubstring(void)
+{
+	int	i, j, k, a = 0, st;
+	int	n1, n2 = -1;
+	tchar	*tp = NULL, c;
+	filep	savip;
+
+	if (dip != d)
+		wbfl();
+	lgf++;
+	skip(1);
+	if ((i = getrq()) == 0)
+		return;
+	if (i >= 256)
+		i = maybemore(i, 0);
+	if ((j = findmn(i)) < 0) {
+		nosuch(i);
+		return;
+	}
+	if (skip(1))
+		return;
+	n1 = atoi();
+	if (skip(0) == 0)
+		n2 = atoi();
+	savip = ip;
+	ip = (filep)contab[j].mx;
+	k = 0;
+	do {
+		c = rbf();
+		k++;
+		if (k >= a) {
+			a += 512;
+			tp = realloc(tp, a * sizeof *tp);
+		}
+		tp[k-1] = c;
+	} while (c != 0);
+	k--;
+	ip = savip;
+	if ((offset = finds(i)) != 0) {
+		st = 0;
+		if (n1 < 0)
+			n1 = k + n1;
+		if (n2 < 0)
+			n2 = k + n2;
+		if (n1 >= 0 || n2 >= 0) {
+			if (n2 < n1) {
+				j = n1;
+				n1 = n2;
+				n2 = j;
+			}
+			for (j = 0; j <= k; j++) {
+				if (st == 0) {
+					if (j >= n1)
+						st = 1;
+				}
+				if (st == 1) {
+					wbf(tp[j]);
+					if (j >= n2)
+						break;
+				}
+			}
+		}
+		wbf(0);
+		wbfl();
+		clrmn(oldmn);
+		if (newmn) {
+			if (contab[newmn].rq)
+				munhash(&contab[newmn]);
+			contab[newmn].rq = i;
+			maddhash(&contab[newmn]);
+		}
+	}
+	free(tp);
+	offset = dip->op;
+}
+
+void
+caselength(void)
+{
+	int	i, j;
+
+	lgf++;
+	skip(1);
+	if ((i = getrq()) == 0)
+		return;
+	if (i >= 256)
+		i = maybemore(i, 1);
+	j = 0;
+	lgf--;
+	copyf++;
+	if (skip(1) == 0) {
+		while(cbits(getch()) != '\n')
+			j++;
+	}
+	copyf--;
+	numtab[findr(i)].val = j;
 }
 
 
